--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,22 +11,10 @@
     "ecmaVersion": "latest"
   },
   "rules": {
-    "no-unused-vars": "warn",
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
+    "no-unused-vars": "off",
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"]
   }
 }
